<resources>
    <string name="app_name">Travel Maker</string>
    <string name="splash_text">© Team traveler Maker - Beautiful Sisters</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="mypage">마이페이지</string>
    <string name="setting">설정</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="traveler_maker">Traveler Maker</string>
    <string name="text_one">여행을 통해 즐거운 추억을 만들어보세요.</string>
    <string name="mountains">산</string>
    <string name="summer">바다</string>
    <string name="sew">계곡</string>
    <string name="island">섬</string>
    <string name="hotple">핫플ACE</string>
    <string name="city">시티투어</string>
    <string name="randmark">랜드마크</string>
    <string name="fork">맛집</string>
    <string name="left"><![CDATA[<]]></string>
</resources>
