<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_1"
            app:showAsAction="ifRoom"
            android:enabled="true"
            android:icon="@drawable/home"
            android:title="@string/home" />

    <item
            android:id="@+id/action_2"
            app:showAsAction="ifRoom"
            android:icon="@drawable/search"
            android:title="@string/search" />

    <item
            android:id="@+id/action_3"
            app:showAsAction="ifRoom"
            android:enabled="true"
            android:icon="@drawable/user"
            android:title="@string/mypage" />

    <item
            android:id="@+id/action_4"
            app:showAsAction="ifRoom"
            android:enabled="true"
            android:icon="@drawable/settings"
            android:title="@string/setting" />

</menu>