<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.HomeFragment">

    <include
        android:id="@+id/title"
        layout="@layout/title"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </androidx.viewpager.widget.ViewPager>

    <TextView
        android:id="@+id/travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_one"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view_pager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/mountains"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mountains"
        android:background="@drawable/circular"
        android:padding="12dp"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="300dp"
        app:layout_constraintTop_toBottomOf="@id/travel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mountains"
        android:textSize="8pt"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="300dp"
        app:layout_constraintTop_toBottomOf="@+id/mountains"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/summer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/summer"
        android:background="@drawable/circular"
        android:padding="12dp"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toBottomOf="@id/travel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summer"
        android:textSize="8pt"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toBottomOf="@+id/summer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/sew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sea_waves"
        android:background="@drawable/circular"
        android:padding="12dp"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="100dp"
        app:layout_constraintTop_toBottomOf="@+id/travel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sew"
        android:textSize="8pt"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        app:layout_constraintTop_toBottomOf="@+id/summer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/island"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/island"
        android:background="@drawable/circular"
        android:padding="12dp"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="300dp"
        app:layout_constraintTop_toBottomOf="@+id/travel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/island"
        android:textSize="8pt"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="300dp"
        app:layout_constraintTop_toBottomOf="@+id/summer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/hot"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/hot"
        android:background="@drawable/circular2"
        android:backgroundTint="#dec2c2"
        android:padding="12dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mountains"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotple"
        android:textColor="@android:color/black"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="300dp"
        app:layout_constraintTop_toBottomOf="@id/hot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>